gitconfig: general tidy up, add some new and remove unwanted aliases

--- a/.gitconfig
+++ b/.gitconfig
@@ -1,7 +1,7 @@
 ; Various tips and tricks borrowed, from, amongst others:
 ;   https://github.com/sjl/dotfiles
 ;   https://github.com/NilsHaldenwang/dotfiles
-;   https://github.com/ColinHebert/dotfiles 
+;   https://github.com/ColinHebert/dotfiles
 ;   http://blog.apiaxle.com/post/handy-git-tips-to-stop-you-getting-fired/
 ;   http://stackoverflow.com/questions/4611512/is-there-a-way-to-make-git-pull-automatically-update-submodules
 ;   http://mkoby.com/2011/05/02/using-git-submodules/
@@ -31,6 +31,7 @@
 
     stage = add
     unstage = reset HEAD
+    amend = commit --amend
     uncommit = reset --soft HEAD^
     unstash = stash pop
     discard = checkout --
@@ -74,14 +75,17 @@
 
     last = diff HEAD^
     pending = diff --cached
-    history = log --pretty=format:\"%h %ad | %s%d [%an]\" --graph --date=short
-    l = log -18 --color=always --all --topo-order --pretty='format:%Cgreen%h%Creset %s%Cred%d%Creset %C(black bold)(by %an)%Creset'
-    ll = log     --color=always --all --topo-order --pretty='format:%Cgreen%h%Creset %s%Cred%d%Creset %C(black bold)(by %an)%Creset'
-    gl = log -12 --color=always --all --graph --topo-order --pretty='format:%Cgreen%h%Creset %s %C(black bold)(by %an)%Creset%C(yellow bold)%d%Creset%n'
-    gll = log     --color=always --all --graph --topo-order --pretty='format:%Cgreen%h%Creset %s %C(black bold)(%cr by %an)%Creset%C(yellow bold)%d%Creset%n'
-    ; l = log --pretty=format:\"%h | %s%d\" --graph
+
+    history = log --all --graph      --date=short --pretty=format:'%Cred%h%Creset - %Cgreen%cd%Creset -%C(yellow)%d%Creset %s %C(bold blue)<%an>%Creset'
+    ack     = log --all --topo-order --date=short --pretty=format:'%Cred%h%Creset - %Cgreen%cd%Creset -%C(yellow)%d%Creset %s %C(bold blue)<%an>%Creset' --full-history -S
+
+    l   = log --all -20 --topo-order --abbrev-commit --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr)%Creset %C(bold blue)<%an>%Creset'
+    ll  = log --all     --topo-order --abbrev-commit --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr)%Creset %C(bold blue)<%an>%Creset'
+    gl  = log --all -20 --graph      --abbrev-commit --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr)%Creset %C(bold blue)<%an>%Creset'
+    gll = log --all     --graph      --abbrev-commit --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr)%Creset %C(bold blue)<%an>%Creset'
+
     log-merge = !git log $(git merge-base --octopus $(git log -1 --merges --pretty=format:%P $1))..$1 --graph --pretty=oneline --abbrev-commit --boundary
-    log-all = !git log --graph --decorate --pretty=oneline --abbrev-commit --all $(git fsck --no-reflogs | grep commit | cut -d\\ -f3)
+    log-all   = !git log --graph --decorate --pretty=oneline --abbrev-commit --all $(git fsck --no-reflogs | grep commit | cut -d\\ -f3)
 
     assume   = update-index --assume-unchanged
     unassume = update-index --no-assume-unchanged
@@ -91,46 +95,42 @@
     theirs   = "!f() { git checkout --theirs $@ && git add $@; }; f"
 
     graft = cherry-pick -x
-    ack = log --color=always --all --topo-order --pretty='format:%Cgreen%h%Creset %s%Cred%d%Creset %C(black bold)(by %an)%Creset' --full-history -S
+
+    ignore = "!gi() { curl -L -s https://www.gitignore.io/api/$@ ;}; gi"
+    
+    zip-current-branch = !git archive --format zip --output=./$(pwd | rev | cut -d/ -f1 | rev).zip $(git currentbranch)
 
 [diff]
     algorithm = patience
 
-[difftool]
-    ; prompt = false
-
 [push]
     default = current
 
-[merge]
-    ; tool = splice
-
-[mergetool "splice"]
-    ; cmd = "vim -f $BASE $LOCAL $REMOTE $MERGED -c 'SpliceInit'"
-    ; trustExitCode = true
-
 [color]
     ui = auto
-    ; diff = auto
-    ; status = auto
-    ; branch = auto
-    ; interactive = auto
+    diff = auto
+;   status = auto
+    branch = auto
+    interactive = auto
+
+; [color "diff"]
+;     meta = yellow
+;     frag = magenta
+;     old  = red
+;     new  = green
+
+[color "status"]
+;     header =
+    added     = green
+    changed   = cyan
+    untracked = red
+;     branch =
+;     nobranch =
 
 ; [color "branch"]
 ;     current = yellow reverse
 ;     local = yellow
 ;     remote = green
-
-; [color "diff"]
-;     meta = yellow bold
-;     frag = magenta bold
-;     old = red bold
-;     new = green bold
-
-; [color "status"]
-;     added = yellow
-;     changed = green
-;     untracked = cyan
 
 [include]
     path = .gitconfig.user
