--- a/.ackrc
+++ b/.ackrc
@@ -1,20 +1,47 @@
+# General Settings
+# ################
+
+# only search with case sensitivity if there is mixed case
 --smart-case
---type-set
-log=.log
---type-set
-django=.py,.html
---type-set
-less=.less
---type-set
-vim=.vim
---type-set
-puppet=.pp
---type-set
-fe=.html,.js,.less
---type-set
-fea=.html,.js,.less,.css
---type-set
-docs=.markdown,.md,.mdown,.rst
+
+# follow symlinks
+--follow
+
+# always sort the files
+--sort-files
+
+# always color, even if piping to a another program
+--color
+
+# no grouping
+--noheading
+--break
+
+# always use a PAGER
+--pager=less
+
+# always print filename prefix
+--with-filename
+
+# General ignore directories
+--ignore-dir=log
+--ignore-dir=tmp
+--ignore-dir=vendor
 --ignore-dir=build/html
 --ignore-dir=docs/build
 --ignore-dir=migrations
+
+
+# Updated Filetypes
+###################
+
+--type-add=css:ext:sass,less,scss
+--type-add=js:ext:coffee
+
+
+# Custom Filetypes
+# ################
+
+--type-set=coffee:ext:coffee
+--type-set=cucumber:ext:feature
+--type-set=web:ext:html,htm,js,css
