--- a/.ackrc
+++ b/.ackrc
@@ -46,4 +46,5 @@
 --type-set=coffee:ext:coffee
 --type-set=cucumber:ext:feature
 --type-set=linguist:ext:ts
+--type-set=po:ext:po
 --type-set=web:ext:html,htm,js,css
