ctags: configure for general use, Vim and Git
- default ctags config
- git ctags alias and hooks for checkout/commit/merge/rebase
- vim tags support (native and Tagbar)
- updated dotfiles dependencies meta-package
- updated install script for default git template
- updated README

--- a/.gitconfig
+++ b/.gitconfig
@@ -103,6 +103,8 @@
     wdiff = diff --color-words
     wshow = show --color-words
 
+    ctags = !.git/hooks/ctags
+
 [diff]
     algorithm = patience
 
@@ -137,3 +139,5 @@
 
 [include]
     path = .gitconfig.user
+[init]
+	templatedir = ~/.git_template
