--- a/.gbp.conf
+++ b/.gbp.conf
@@ -10,7 +10,7 @@ export-dir = ../build-area/
 tarball-dir = ../tarballs/
 builder = git-pbuilder
 cleaner = fakeroot debian/rules clean
-postbuild = lintian $GBP_CHANGES_FILE
+postbuild = lintian -EvIL +pedantic --profile pkg-perl $GBP_CHANGES_FILE
 
 [import-orig]
 dch = False
