--- a/.gbp.conf
+++ b/.gbp.conf
@@ -6,11 +6,11 @@ full = True
 git-author = True
 
 [buildpackage]
-export-dir = ../build-area/
-tarball-dir = ../tarballs/
+export-dir = /home/nick/dev/src/git/debian-packaging/build-area
+tarball-dir = /home/nick/dev/src/git/debian-packaging/tarballs
 builder = git-pbuilder
 cleaner = fakeroot debian/rules clean
-postbuild = lintian -EvIL +pedantic --profile pkg-perl $GBP_CHANGES_FILE
+postbuild = lintian -EvIL +pedantic --no-tag-display-limit --profile pkg-perl $GBP_CHANGES_FILE
 
 [import-orig]
 dch = False
