--- a/.gitconfig
+++ b/.gitconfig
@@ -24,17 +24,22 @@
     ci = commit --verbose
     cm = commit -m
     co = checkout
+    ir = rebase --interactive
     sub = submodule
-    a = add
-    aa = add --all
+
+    addall = add --all
     remove = rm
+
+    unstash = stash pop
+
+    discard = checkout --
 
     stage = add
     unstage = reset HEAD
+
     amend = commit --amend --verbose
     uncommit = reset --soft HEAD^
-    unstash = stash pop
-    discard = checkout --
+
     discard-merge = reset --hard HEAD
 
     b = branch -a
@@ -64,6 +69,7 @@
 
     fo = fetch origin
     fu = fetch upstream
+    fg = fetch github
 
     up = merge --ff-only
     join = merge --no-ff
@@ -82,10 +88,15 @@
     history = log --all --graph      --date=short --pretty=format:'%Cred%h%Creset - %Cgreen%cd%Creset -%C(yellow)%d%Creset %s %C(bold blue)<%an>%Creset'
     ack     = log --all --topo-order --date=short --pretty=format:'%Cred%h%Creset - %Cgreen%cd%Creset -%C(yellow)%d%Creset %s %C(bold blue)<%an>%Creset' --full-history -S
 
-    l   = log --all -20 --topo-order --abbrev-commit --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr)%Creset %C(bold blue)<%an>%Creset'
-    ll  = log --all     --topo-order --abbrev-commit --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr)%Creset %C(bold blue)<%an>%Creset'
-    gl  = log --all -20 --graph      --abbrev-commit --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr)%Creset %C(bold blue)<%an>%Creset'
-    gll = log --all     --graph      --abbrev-commit --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr)%Creset %C(bold blue)<%an>%Creset'
+    l   = log -20 --topo-order --abbrev-commit --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr)%Creset %C(bold blue)<%an>%Creset'
+    ll  = log     --topo-order --abbrev-commit --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr)%Creset %C(bold blue)<%an>%Creset'
+    gl  = log -20 --graph      --abbrev-commit --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr)%Creset %C(bold blue)<%an>%Creset'
+    gll = log     --graph      --abbrev-commit --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr)%Creset %C(bold blue)<%an>%Creset'
+
+    la   = log --all -20 --topo-order --abbrev-commit --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr)%Creset %C(bold blue)<%an>%Creset'
+    lla  = log --all     --topo-order --abbrev-commit --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr)%Creset %C(bold blue)<%an>%Creset'
+    gla  = log --all -20 --graph      --abbrev-commit --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr)%Creset %C(bold blue)<%an>%Creset'
+    glla = log --all     --graph      --abbrev-commit --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr)%Creset %C(bold blue)<%an>%Creset'
 
     log-merge = !git log $(git merge-base --octopus $(git log -1 --merges --pretty=format:%P $1))..$1 --graph --pretty=oneline --abbrev-commit --boundary
     log-all   = !git log --graph --decorate --pretty=oneline --abbrev-commit --all $(git fsck --no-reflogs | grep commit | cut -d\\ -f3)
@@ -143,4 +154,4 @@
 [include]
     path = .gitconfig.user
 [init]
-	templatedir = ~/.git_template
+    templatedir = ~/.git_template
