pbuilderrc: updates for pdebuild

--- a/.pbuilderrc
+++ b/.pbuilderrc
@@ -1,4 +1,6 @@
 PDEBUILD_PBUILDER=cowbuilder
+BASEPATH=/var/cache/pbuilder/base-sid.cow
+BUILDRESULT=/home/nick/dev/src/git/debian-packaging/build-area
 OTHERMIRROR="deb [trusted=yes] file:///home/nick/dev/src/git/debian-packaging/build-area ./"
 BINDMOUNTS="/home/nick/dev/src/git/debian-packaging/build-area"
 HOOKDIR=/usr/lib/pbuilder/hooks
