gitconfig: more log aliases

--- a/.gitconfig
+++ b/.gitconfig
@@ -101,6 +101,10 @@
     log-merge = !git log $(git merge-base --octopus $(git log -1 --merges --pretty=format:%P $1))..$1 --graph --pretty=oneline --abbrev-commit --boundary
     log-all   = !git log --graph --decorate --pretty=oneline --abbrev-commit --all $(git fsck --no-reflogs | grep commit | cut -d\\ -f3)
 
+    lf   = log --name-only
+    lp   = log --patch --patience
+    lw   = whatchanged
+
     assume   = update-index --assume-unchanged
     unassume = update-index --no-assume-unchanged
     assumed  = "!git ls-files -v | grep ^h | cut -c 3-"
