tmux: sync tmux and tmuxinator configs

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,149 +1,221 @@
 # .tmux.conf file
 
-# Setting the prefix from C-b to C-a
-# START:prefix
-set -g prefix C-a
-# END:prefix
+# Credits {{{1
 
-# Free the original Ctrl-b prefix keybinding
-# START:unbind
-unbind C-b
-# END:unbind
+# Snippets (large and small) taken from:
+#   https://pragprog.com/titles/bhtmux/source_code
+#   https://github.com/wincent/wincent/blob/master/roles/dotfiles/files/.tmux.conf
 
-#setting the delay between prefix and command
-# START:delay
+# Tips {{{1
+
+# Bindings:
+# - to see current bindings:
+#   list-keys -t {vi,emacs}-{edit,choice,copy}
+
+# Global settings {{{1
+
+# Setting the delay between prefix and command
 set -s escape-time 1
-# END:delay
-
-# Ensure that we can send Ctrl-A to other apps
-# START:bind_prefix
-bind C-a send-prefix
-# END:bind_prefix
 
 # Set the base index for windows to 1 instead of 0
-# START:index
 set -g base-index 1
-# END:index
 
 # Set the base index for panes to 1 instead of 0
-# START:panes_index
 setw -g pane-base-index 1
-# END:panes_index
 
-# Reload the file with Prefix r
-# START:reload
-bind r source-file ~/.tmux.conf \; display "Reloaded!"
-# END:reload
+# Automatically renumber window numbers on closing a pane (tmux >= 1.7).
+set -g renumber-windows on
 
-# splitting panes
-# START:panesplit
-bind | split-window -h
-bind - split-window -v
-# END:panesplit
+# Mouse can be used to select panes, select windows (by clicking on the status
+# bar), resize panes. For default bindings see `tmux list-keys` and `tmux
+# list-keys -t vi-copy`.
+set -g mouse on
 
-# moving between panes
-# START:paneselect
-bind h select-pane -L
-bind j select-pane -D
-bind k select-pane -U
-bind l select-pane -R
-# END:paneselect
+# Slightly more useful width in "main-vertical" layout; enough room for 3-digit
+# line number gutter in Vim + 80 columns of text + 1 column breathing room
+# (default looks to be about 79).
+set -w -g main-pane-width 85
 
-# Quick pane selection
-# START:panetoggle
-bind -r C-h select-window -t :-
-bind -r C-l select-window -t :+
-# END:panetoggle
+set -g history-limit 262144
 
-# Pane resizing
-# START:paneresize
-bind -r H resize-pane -L 5
-bind -r J resize-pane -D 5
-bind -r K resize-pane -U 5
-bind -r L resize-pane -R 5
-# END:paneresize
+# Dynamically update terminal tab/window titles.
+set -g set-titles on
 
-# mouse support - set to on if you want to use the mouse
-# START:mouse
-setw -g mode-mouse off
-set -g mouse-select-pane off
-set -g mouse-resize-pane off
-set -g mouse-select-window off
-# END:mouse
+# Needed as on tmux 1.9 and up (defaults to off).
+# Added in tmux commit c7a121cfc0137c907b7bfb.
+set -g focus-events on
+
+# But don't change tmux's own window titles.
+set -w -g automatic-rename off
+
+# Don't wrap searches; it's super confusing given tmux's reverse-ordering of
+# position info in copy mode.
+set -w -g wrap-search off
 
 # Set the default terminal mode to 256color mode
-# START:termcolor
 set -g default-terminal "screen-256color"
-# END:termcolor
 
 # enable activity alerts
-#START:activity
 setw -g monitor-activity on
 set -g visual-activity on
-#END:activity
 
-# set the status line's colors
-# START:statuscolor
-set -g status-fg white
-set -g status-bg black
-# END:statuscolor
+# enable vi keys.
+setw -g mode-keys vi
 
-# set the color of the window list
-# START:windowstatuscolor
-setw -g window-status-fg cyan
-setw -g window-status-bg default
-setw -g window-status-attr dim
-# END:windowstatuscolor
+# Center the window list
+set -g status-justify centre
+# Prefix {{{1
 
-# set colors for the active window
-# START:activewindowstatuscolor
-setw -g window-status-current-fg white
-setw -g window-status-current-bg red
-setw -g window-status-current-attr bright
-# END:activewindowstatuscolor
+# Prefix
+unbind C-b
+set -g prefix C-Space
 
-# pane colors
-# START:panecolors
-set -g pane-border-fg green
-set -g pane-border-bg black
-set -g pane-active-border-fg white
-set -g pane-active-border-bg yellow
-# END:panecolors
+# Ensure that we can send Ctrl-Space to other apps
+bind C-Space send-prefix
 
-# Command / message line
-# START:cmdlinecolors
-set -g message-fg white
-set -g message-bg black
-set -g message-attr bright
-# END:cmdlinecolors
+# Bindings {{{1
+
+# Reload the file with Prefix r
+unbind r
+bind r source-file ~/.tmux.conf \; display "Reloaded tmux config..."
+
+# Open new windows/splits with the path of the current pane.
+unbind c
+bind c new-window -c '#{pane_current_path}'
+unbind %
+bind | split-window -h -c '#{pane_current_path}' # normally prefix-%
+bind \ split-window -h -c '#{pane_current_path}' # normally prefix-%
+unbind '"'
+bind - split-window -v -c '#{pane_current_path}' # normally prefix-"
+
+# Vim-like key bindings for pane navigation (default uses cursor keys).
+unbind h
+bind h select-pane -L
+unbind j
+bind j select-pane -D
+unbind k
+bind k select-pane -U
+unbind l # normally last-window
+bind l select-pane -R
+
+# Quick pane cycling
+bind -r Tab select-pane -t :.+
+
+# Resizing (mouse also works).
+unbind H
+bind -r H resize-pane -L 5
+unbind L # normally last session
+bind -r L resize-pane -R 5
+unbind J
+bind -r J resize-pane -D 5
+unbind K
+bind -r K resize-pane -U 5
+
+# Fast toggle (normally prefix-l).
+# unbind C-space
+bind ^space last-window
+
+# Quick window selection
+unbind Left
+bind -r Left select-window -t :-
+unbind Right
+bind -r Right select-window -t :+
+
+# Shift arrow to switch windows
+# - disabled to not clobber tab-switching in urxvt
+#bind -n S-Left  previous-window
+#bind -n S-Right next-window
+
+bind -t vi-copy v begin-selection
+bind -t vi-copy Escape cancel # for when C-c and q are not enough.
+
+# Yank/paste to X primary/clipboard
+bind -t vi-copy y copy-pipe "xsel --input --primary"
+bind p run "xsel --output --primary | tmux load-buffer - && tmux paste-buffer"
+
+bind -t vi-copy C-c copy-pipe "xsel --input --clipboard"
+bind C-v run "xsel --output --clipboard | tmux load-buffer - && tmux paste-buffer"
+
+# Restore pre-2.1 behavior of scrolling with the scrollwheel in Vim, less, copy
+# mode etc, otherwise entering copy mode if not already in it.
+#
+#   if in copy mode (pane_in_mode) || using the mouse already (mouse_any_flag)
+#     pass through mouse events to current pane (send -Mt=)
+#   elsif in alternate screen mode
+#     send `Up` key
+#   else
+#     enter copy mode (-e exits if we scroll to the bottom)
+#   end
+#
+bind -T root WheelUpPane \
+  if-shell -Ft= '#{?pane_in_mode,1,#{mouse_any_flag}}' \
+    'send -Mt=' \
+    'if-shell -Ft= "#{alternate_on}" "send -t= Up" "copy-mode -et="'
+bind -T root WheelDownPane \
+  if-shell -Ft = '#{?pane_in_mode,1,#{mouse_any_flag}}' \
+    'send -Mt=' \
+    'if-shell -Ft= "#{alternate_on}"  "send -t= Down" "send -Mt="'
+
+# Stay in copy mode on drag end, but otherwise exit for mouse up.
+# Requires patch from https://github.com/tmux/tmux/issues/326
+unbind -t vi-copy MouseDragEnd1Pane
+bind -t vi-copy MouseUp1Pane cancel
+
+
+# Status bar {{{1
 
 # Status line left side
-# START:statusleft
-set -g status-left-length 40
-set -g status-left "#[fg=green]Session: #S #[fg=yellow]#I #[fg=cyan]#P"
-# END:statusleft
-
-#START:utf8
-set -g status-utf8 on
-#END:utf8
+set -g status-left-length 20
+set -g status-left "#[fg=green]#S"
 
 # Status line right side
 # 15% | 28 Nov 18:15
-# START: statusright
-set -g status-right "#[fg=cyan]%d %b %R"
-# END:statusright
+set -g status-right "#(tmux-battery -t) #[fg=cyan]%d %b %R"
 
 # Update the status bar every sixty seconds
-# START:updateinterval
 set -g status-interval 60
-# END:updateinterval
 
-# Center the window list
-# START:centerwindowlist
-set -g status-justify centre
-# END:centerwindowlist
+# Colours {{{1
 
-# enable vi keys.
-# START:vikeys
-setw -g mode-keys vi
-# END:vikeys
+# https://github.com/seebi/tmux-colors-solarized/blob/master/tmuxcolors-dark.conf
+
+# default statusbar colors
+set-option -g status-bg black #base02
+set-option -g status-fg yellow #yellow
+set-option -g status-attr default
+
+# default window title colors
+set-window-option -g window-status-fg brightblue #base0
+set-window-option -g window-status-bg default
+#set-window-option -g window-status-attr dim
+
+# active window title colors
+# set-window-option -g window-status-current-fg brightred #orange
+set-window-option -g window-status-current-fg green #orange
+set-window-option -g window-status-current-bg default
+#set-window-option -g window-status-current-attr bright
+
+# pane border
+set-option -g pane-border-fg black #base02
+set-option -g pane-active-border-fg brightgreen #base01
+
+# message text
+set-option -g message-bg black #base02
+set-option -g message-fg brightred #orange
+
+# pane number display
+set-option -g display-panes-active-colour blue #blue
+set-option -g display-panes-colour brightred #orange
+
+# window activity
+set-window-option -g window-status-activity-attr none
+set-window-option -g window-status-activity-fg red
+set-window-option -g window-status-activity-bg default
+
+# clock
+set-window-option -g clock-mode-colour green #green
+
+# bell
+set-window-option -g window-status-bell-style fg=black,bg=red #base02, red
+
+# vim: fdm=marker:
