--- a/.tmux.conf
+++ b/.tmux.conf
@@ -131,9 +131,16 @@ unbind Right
 bind -r Right select-window -t :+
 
 # Shift arrow to switch windows
-# - disabled to not clobber tab-switching in urxvt
-#bind -n S-Left  previous-window
-#bind -n S-Right next-window
+unbind S-Left
+bind -n S-Left  previous-window
+unbind S-Right
+bind -n S-Right next-window
+
+# C-S arrow to swap windows
+unbind C-S-Left
+bind -n C-S-Left  swap-window -t -1
+unbind C-S-Right
+bind -n C-S-Right swap-window -t +1
 
 bind -t vi-copy v begin-selection
 bind -t vi-copy Escape cancel # for when C-c and q are not enough.
