tmux: use non-login shells instead of the default login shells

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -55,6 +55,9 @@ set -w -g wrap-search off
 # Set the default terminal mode to 256color mode
 set -g default-terminal "screen-256color"
 
+# Start a non-login shell instead of default login shell
+set -g default-command "${SHELL}"
+
 # enable activity alerts
 setw -g monitor-activity on
 set -g visual-activity on
