tmux: single->double quotes on pane_current_path var

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -84,12 +84,14 @@ bind r source-file ~/.tmux.conf \; display "Reloaded tmux config..."
 
 # Open new windows/splits with the path of the current pane.
 unbind c
-bind c new-window -c '#{pane_current_path}'
+bind c new-window -c "#{pane_current_path}"
 unbind %
-bind | split-window -h -c '#{pane_current_path}' # normally prefix-%
-bind \ split-window -h -c '#{pane_current_path}' # normally prefix-%
+# normally prefix-%
+bind | split-window -h -c "#{pane_current_path}"
+bind \ split-window -h -c "#{pane_current_path}"
 unbind '"'
-bind - split-window -v -c '#{pane_current_path}' # normally prefix-"
+# normally prefix-"
+bind - split-window -v -c "#{pane_current_path}"
 
 # Smart pane switching with awareness of Vim splits.
 # See: https://github.com/christoomey/vim-tmux-navigator
