--- a/.tmux.conf
+++ b/.tmux.conf
@@ -182,61 +182,61 @@ bind -T root WheelDownPane \
 unbind -t vi-copy MouseDragEnd1Pane
 bind -t vi-copy MouseUp1Pane cancel
 
-
 # Status bar {{{1
 
 # Status line left side
-set -g status-left-length 20
-set -g status-left "#[fg=green]#S"
+set -g status-left-length 30
+set -g status-left "#[fg=colour2]#S #[fg=colour11]on #[fg=colour9]#H"
 
 # Status line right side
-# 15% | 28 Nov 18:15
-set -g status-right "#(tmux-battery -t) #[fg=cyan]%d %b %R"
+# 15% | 28 Nov | 18:15
+set -g status-right-length 30
+set -g status-right "#(tmux-battery -t) #[fg=colour11]%d %b | %R"
 
 # Update the status bar every sixty seconds
 set -g status-interval 60
 
 # Colours {{{1
 
-# https://github.com/seebi/tmux-colors-solarized/blob/master/tmuxcolors-dark.conf
+# Note the tmux mapping of colour numbers to names:
+#   https://github.com/tmux/tmux/blob/master/colour.c#L109
+#
+# (See bin/colorlist to get a list of current colours by int)
+#
+# case  0: return ("black");
+# case  1: return ("red");
+# case  2: return ("green");
+# case  3: return ("yellow");
+# case  4: return ("blue");
+# case  5: return ("magenta");
+# case  6: return ("cyan");
+# case  7: return ("white");
+# case  8: return ("default");
+# case 90: return ("brightblack");
+# case 91: return ("brightred");
+# case 92: return ("brightgreen");
+# case 93: return ("brightyellow");
+# case 94: return ("brightblue");
+# case 95: return ("brightmagenta");
+# case 96: return ("brightcyan");
+# case 97: return ("brightwhite");
 
-# default statusbar colors
-set-option -g status-bg black #base02
-set-option -g status-fg yellow #yellow
-set-option -g status-attr default
+# Based on https://github.com/seebi/tmux-colors-solarized
 
-# default window title colors
-set-window-option -g window-status-fg brightblue #base0
-set-window-option -g window-status-bg default
-#set-window-option -g window-status-attr dim
+set -g status-style fg=colour3,bg=colour0
+setw -g window-status-style fg=colour11,bg=default
+setw -g window-status-current-style fg=colour2,bg=default
+setw -g window-status-activity-style fg=colour1,bg=default
+setw -g window-status-bell-style fg=colour0,bg=colour1
 
-# active window title colors
-# set-window-option -g window-status-current-fg brightred #orange
-set-window-option -g window-status-current-fg green #orange
-set-window-option -g window-status-current-bg default
-#set-window-option -g window-status-current-attr bright
+set -g message-style fg=colour1,bg=colour0
 
-# pane border
-set-option -g pane-border-fg black #base02
-set-option -g pane-active-border-fg brightgreen #base01
+set -g display-panes-active-colour colour1
+set -g display-panes-colour colour4
+setw -g pane-border-style fg=colour0
+setw -g pane-active-border-style fg=colour11
 
-# message text
-set-option -g message-bg black #base02
-set-option -g message-fg brightred #orange
-
-# pane number display
-set-option -g display-panes-active-colour blue #blue
-set-option -g display-panes-colour brightred #orange
-
-# window activity
-set-window-option -g window-status-activity-attr none
-set-window-option -g window-status-activity-fg red
-set-window-option -g window-status-activity-bg default
-
-# clock
-set-window-option -g clock-mode-colour green #green
-
-# bell
-set-window-option -g window-status-bell-style fg=black,bg=red #base02, red
+setw -g clock-mode-colour colour2
+setw -g clock-mode-style 24
 
 # vim: fdm=marker:
