tmux: disable visual-activity and bell

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -58,9 +58,12 @@ set -g default-terminal "screen-256color"
 # Start a non-login shell instead of default login shell
 set -g default-command "${SHELL}"
 
+# visual bell
+set -g visual-bell off
+set -g bell-action none
+
 # enable activity alerts
 setw -g monitor-activity on
-set -g visual-activity on
 
 # enable vi keys.
 setw -g mode-keys vi
