tmux: use -n instead of -T root

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -168,11 +168,11 @@ bind C-v run "xsel --output --clipboard | tmux load-buffer - && tmux paste-buffe
 #     enter copy mode (-e exits if we scroll to the bottom)
 #   end
 #
-bind -T root WheelUpPane \
+bind -n WheelUpPane \
   if-shell -Ft= '#{?pane_in_mode,1,#{mouse_any_flag}}' \
     'send -Mt=' \
     'if-shell -Ft= "#{alternate_on}" "send -t= Up" "copy-mode -et="'
-bind -T root WheelDownPane \
+bind -n WheelDownPane \
   if-shell -Ft = '#{?pane_in_mode,1,#{mouse_any_flag}}' \
     'send -Mt=' \
     'if-shell -Ft= "#{alternate_on}"  "send -t= Down" "send -Mt="'
