--- a/.tmux.conf
+++ b/.tmux.conf
@@ -199,6 +199,84 @@ set -g status-right "#(tmux-battery -t) #[fg=colour11]%d %b | %R"
 # Update the status bar every sixty seconds
 set -g status-interval 60
 
+# Nested session support {{{1
+#   Based on http://stahlke.org/dan/tmux-nested/
+#
+# The idea is to unbind prefix and any non-prefixed keys before "switching"
+# to nested session (i.e. the prefix is only detected in the nested session).
+# We restore the prefix and root table keys when "switching back" and change
+# statusbar to give visual hint of active session.
+
+# Convenience binding to disable status bar
+bind -n M-F11 \
+    set -qg status-style fg=colour10,bg=colour0 \; \
+    setw -qg window-status-style fg=colour10,bg=default \; \
+    setw -qg window-status-current-style fg=colour10,bg=default \; \
+    setw -qg window-status-activity-style fg=colour12,bg=default \; \
+    setw -qg window-status-bell-style fg=colour0,bg=colour1 \; \
+    setw -qg window-status-format '(Inactive)' \; \
+    set -qg status-left " " \; \
+    set -qg status-right " " \; \
+
+# Convenience binding to enable status bar
+bind -n M-F12 \
+    set -qg status-style fg=colour3,bg=colour0 \; \
+    setw -qg window-status-style fg=colour11,bg=default \; \
+    setw -qg window-status-current-style fg=colour2,bg=default \; \
+    setw -qg window-status-activity-style fg=colour1,bg=default \; \
+    setw -qg window-status-bell-style fg=colour0,bg=colour1 \; \
+    setw -qg window-status-format '#I:#W#F' \; \
+    set -qg status-left "#[fg=colour2]#S #[fg=colour11]on #[fg=colour9]#H" \; \
+    set -qg status-right "#(tmux-battery -t) #[fg=colour11]%d %b | %R" \; \
+
+# "Switch" to inner (nested) session:
+# - send M-F12 to active window (inner (nested) session) to enable status bar
+# - disable status bar, default prefix and root keybindings for outer session
+bind -n S-Up \
+    send M-F12 \; \
+    set -qg status-style fg=colour10,bg=colour0 \; \
+    setw -qg window-status-style fg=colour10,bg=default \; \
+    setw -qg window-status-current-style fg=colour10,bg=default \; \
+    setw -qg window-status-activity-style fg=colour12,bg=default \; \
+    setw -qg window-status-bell-style fg=colour0,bg=colour1 \; \
+    setw -qg window-status-format '(Inactive)' \; \
+    set -qg status-left " " \; \
+    set -qg status-right " " \; \
+    unbind -n S-Left \; \
+    unbind -n S-Right \; \
+    unbind -n C-S-Left \; \
+    unbind -n C-S-Right \; \
+    unbind -n C-h \; \
+    unbind -n C-j \; \
+    unbind -n C-k \; \
+    unbind -n C-l \; \
+    unbind -n C-\ \; \
+    set -qg prefix C-b
+
+# Switch to outer (parent) session:
+# - send M-F11 to active window to disable status bar
+# - enable status bar, default prefix and root keybindings for outer session
+bind -n S-Down \
+    send M-F11 \; \
+    set -qg status-style fg=colour3,bg=colour0 \; \
+    setw -qg window-status-style fg=colour11,bg=default \; \
+    setw -qg window-status-current-style fg=colour2,bg=default \; \
+    setw -qg window-status-activity-style fg=colour1,bg=default \; \
+    setw -qg window-status-bell-style fg=colour0,bg=colour1 \; \
+    setw -qg window-status-format '#I:#W#F' \; \
+    set -qg status-left "#[fg=colour2]#S #[fg=colour11]on #[fg=colour9]#H" \; \
+    set -qg status-right "#(tmux-battery -t) #[fg=colour11]%d %b | %R" \; \
+    bind -n S-Left  prev \; \
+    bind -n S-Right next \; \
+    bind -n C-S-Left swap-window -t -1 \; \
+    bind -n C-S-Right swap-window -t +1 \; \
+    bind -n C-h if-shell "$is_vim" "send-keys C-h"  "select-pane -L" \; \
+    bind -n C-j if-shell "$is_vim" "send-keys C-j"  "select-pane -D" \; \
+    bind -n C-k if-shell "$is_vim" "send-keys C-k"  "select-pane -U" \; \
+    bind -n C-l if-shell "$is_vim" "send-keys C-l"  "select-pane -R" \; \
+    bind -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l" \; \
+    set -qg prefix C-Space
+
 # Colours {{{1
 
 # Note the tmux mapping of colour numbers to names:
