tmux: add separator after optional battery status in status-right

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -194,7 +194,7 @@ set -g status-left "#[fg=colour2]#S #[fg=colour11]on #[fg=colour9]#H"
 # Status line right side
 # 15% | 28 Nov | 18:15
 set -g status-right-length 30
-set -g status-right "#(tmux-battery -t) #[fg=colour11]%d %b | %R"
+set -g status-right "#(tmux-battery -t) #[fg=colour11]| %d %b | %R"
 
 # Update the status bar every sixty seconds
 set -g status-interval 60
@@ -227,7 +227,7 @@ bind -n M-F12 \
     setw -qg window-status-bell-style fg=colour0,bg=colour1 \; \
     setw -qg window-status-format '#I:#W#F' \; \
     set -qg status-left "#[fg=colour2]#S #[fg=colour11]on #[fg=colour9]#H" \; \
-    set -qg status-right "#(tmux-battery -t) #[fg=colour11]%d %b | %R" \; \
+    set -qg status-right "#(tmux-battery -t) #[fg=colour11]| %d %b | %R" \; \
 
 # "Switch" to inner (nested) session:
 # - send M-F12 to active window (inner (nested) session) to enable status bar
@@ -265,7 +265,7 @@ bind -n S-Down \
     setw -qg window-status-bell-style fg=colour0,bg=colour1 \; \
     setw -qg window-status-format '#I:#W#F' \; \
     set -qg status-left "#[fg=colour2]#S #[fg=colour11]on #[fg=colour9]#H" \; \
-    set -qg status-right "#(tmux-battery -t) #[fg=colour11]%d %b | %R" \; \
+    set -qg status-right "#(tmux-battery -t) #[fg=colour11]| %d %b | %R" \; \
     bind -n S-Left  prev \; \
     bind -n S-Right next \; \
     bind -n C-S-Left swap-window -t -1 \; \
