tmux: add some nice tricks
* enable aggressive-resize
* maximise/restore windows
* toggle synchronize-panes

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -5,6 +5,7 @@
 # Snippets (large and small) taken from:
 #   https://pragprog.com/titles/bhtmux/source_code
 #   https://github.com/wincent/wincent/blob/master/roles/dotfiles/files/.tmux.conf
+#   https://github.com/nicknisi/dotfiles/blob/master/tmux/tmux.conf.symlink
 
 # Tips {{{1
 
@@ -35,6 +36,11 @@ set -g mouse on
 # line number gutter in Vim + 80 columns of text + 1 column breathing room
 # (default looks to be about 79).
 set -w -g main-pane-width 85
+
+# Rather than constraining window size to the maximum size of any client
+# connected to the *session*, constrain window size to the maximum size of any
+# client connected to *that window*. Much more reasonable.
+setw -g aggressive-resize on
 
 set -g history-limit 262144
 
@@ -149,6 +155,16 @@ unbind C-S-Left
 bind -n C-S-Left  swap-window -t -1
 unbind C-S-Right
 bind -n C-S-Right swap-window -t +1
+
+# maximizing and restoring windows
+unbind Up
+bind Up new-window -d -n fullscreen \; swap-pane -s fullscreen.1 \; select-window -t fullscreen
+unbind Down
+bind Down last-window \; swap-pane -s fullscreen.1 \; kill-window -t fullscreen
+
+# toggle synchronize all panes in a window
+unbind y
+bind y setw synchronize-panes
 
 bind -t vi-copy v begin-selection
 bind -t vi-copy Escape cancel # for when C-c and q are not enough.
