tmux: Do not clobber C-b in Vim with temporary prefix

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -219,6 +219,7 @@ set -g status-interval 60
 #   Based on http://stahlke.org/dan/tmux-nested/
 #
 # The idea is to unbind prefix and any non-prefixed keys before "switching"
+
 # to nested session (i.e. the prefix is only detected in the nested session).
 # We restore the prefix and root table keys when "switching back" and change
 # statusbar to give visual hint of active session.
@@ -267,7 +268,7 @@ bind -n S-Up \
     unbind -n C-k \; \
     unbind -n C-l \; \
     unbind -n C-\ \; \
-    set -qg prefix C-b
+    set -qg prefix C-S-Space
 
 # Switch to outer (parent) session:
 # - send M-F11 to active window to disable status bar
