--- a/.tmux.conf
+++ b/.tmux.conf
@@ -61,6 +61,9 @@ set -w -g wrap-search off
 # Set the default terminal mode to 256color mode
 set -g default-terminal "screen-256color"
 
+# Enable xterm-style key sequences
+setw -g xterm-keys on
+
 # Start a non-login shell instead of default login shell
 set -g default-command "${SHELL}"
 
@@ -233,7 +236,7 @@ bind -n M-F11 \
     setw -qg window-status-bell-style fg=colour0,bg=colour1 \; \
     setw -qg window-status-format '(Inactive)' \; \
     set -qg status-left " " \; \
-    set -qg status-right " " \; \
+    set -qg status-right " " \;
 
 # Convenience binding to enable status bar
 bind -n M-F12 \
@@ -244,7 +247,7 @@ bind -n M-F12 \
     setw -qg window-status-bell-style fg=colour0,bg=colour1 \; \
     setw -qg window-status-format '#I:#W#F' \; \
     set -qg status-left "#[fg=colour2]#S #[fg=colour11]on #[fg=colour9]#H" \; \
-    set -qg status-right "#(tmux-battery -t) #[fg=colour11]| %d %b | %R" \; \
+    set -qg status-right "#(tmux-battery -t) #[fg=colour11]| %d %b | %R" \;
 
 # "Switch" to inner (nested) session:
 # - send M-F12 to active window (inner (nested) session) to enable status bar
@@ -283,8 +286,8 @@ bind -n S-Down \
     setw -qg window-status-format '#I:#W#F' \; \
     set -qg status-left "#[fg=colour2]#S #[fg=colour11]on #[fg=colour9]#H" \; \
     set -qg status-right "#(tmux-battery -t) #[fg=colour11]| %d %b | %R" \; \
-    bind -n S-Left  prev \; \
-    bind -n S-Right next \; \
+    bind -n S-Left  previous-window \; \
+    bind -n S-Right next-window \; \
     bind -n C-S-Left swap-window -t -1 \; \
     bind -n C-S-Right swap-window -t +1 \; \
     bind -n C-h if-shell "$is_vim" "send-keys C-h"  "select-pane -L" \; \
