tmux: sync local changes

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -97,12 +97,15 @@ bind r source-file ~/.tmux.conf \; display "Reloaded tmux config..."
 # Open new windows/splits with the path of the current pane.
 unbind c
 bind c new-window -c "#{pane_current_path}"
-unbind %
+# Open new windows/splits in home directory
+unbind C
+bind C new-window -c "~"
 # normally prefix-%
+unbind %
 bind | split-window -h -c "#{pane_current_path}"
 bind \ split-window -h -c "#{pane_current_path}"
-unbind '"'
 # normally prefix-"
+unbind '"'
 bind - split-window -v -c "#{pane_current_path}"
 
 # Smart pane switching with awareness of Vim splits.
@@ -141,19 +144,19 @@ bind -r K resize-pane -U 5
 # unbind C-space
 bind ^space last-window
 
-# Quick window selection
+# Window switching with prefix
 unbind Left
-bind -r Left select-window -t :-
+bind -r Left previous-window
 unbind Right
-bind -r Right select-window -t :+
+bind -r Right next-window
 
-# Shift arrow to switch windows
+# Prefix-less window switching
 unbind S-Left
 bind -n S-Left  previous-window
 unbind S-Right
 bind -n S-Right next-window
 
-# C-S arrow to swap windows
+# Prefix-less window swapping
 unbind C-S-Left
 bind -n C-S-Left  swap-window -t -1
 unbind C-S-Right
@@ -169,12 +172,17 @@ bind Down last-window \; swap-pane -s fullscreen.1 \; kill-window -t fullscreen
 unbind y
 bind y setw synchronize-panes
 
+# vim-style yank-paste tmux buffers
+unbind [
+bind Escape copy-mode
+unbind p
+bind p paste-buffer
 bind -t vi-copy v begin-selection
-bind -t vi-copy Escape cancel # for when C-c and q are not enough.
+bind -t vi-copy y copy-selection
 
-# Yank/paste to X primary/clipboard
-bind -t vi-copy y copy-pipe "xsel --input --primary"
-bind p run "xsel --output --primary | tmux load-buffer - && tmux paste-buffer"
+# vim-style yank/paste to X primary/clipboard
+bind -t vi-copy Y copy-pipe "xsel --input --primary"
+bind P run "xsel --output --primary | tmux load-buffer - && tmux paste-buffer"
 
 bind -t vi-copy C-c copy-pipe "xsel --input --clipboard"
 bind C-v run "xsel --output --clipboard | tmux load-buffer - && tmux paste-buffer"
