tmux: remove remaining mouse config; more tidy up

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -30,7 +30,7 @@ set -g renumber-windows on
 # Mouse can be used to select panes, select windows (by clicking on the status
 # bar), resize panes. For default bindings see `tmux list-keys` and `tmux
 # list-keys -t vi-copy`.
-set -g mouse on
+set -g mouse off
 
 # Slightly more useful width in "main-vertical" layout; enough room for 3-digit
 # line number gutter in Vim + 80 columns of text + 1 column breathing room
@@ -130,7 +130,7 @@ bind l select-pane -R
 # Quick pane cycling
 bind -r Tab select-pane -t :.+
 
-# Resizing (mouse also works).
+# Resizing
 unbind H
 bind -r H resize-pane -L 5
 unbind L # normally last session
@@ -142,7 +142,7 @@ bind -r K resize-pane -U 5
 
 # Fast toggle (normally prefix-l).
 # unbind C-space
-bind ^space last-window
+bind C-Space last-window
 
 # Window switching with prefix
 unbind Left
@@ -180,37 +180,13 @@ bind p paste-buffer
 bind -t vi-copy v begin-selection
 bind -t vi-copy y copy-selection
 
-# vim-style yank/paste to X primary/clipboard
+# vim-style yank/paste to X primary
 bind -t vi-copy Y copy-pipe "xsel --input --primary"
 bind P run "xsel --output --primary | tmux load-buffer - && tmux paste-buffer"
 
+# vim-style yank/paste to X clipboard
 bind -t vi-copy C-c copy-pipe "xsel --input --clipboard"
 bind C-v run "xsel --output --clipboard | tmux load-buffer - && tmux paste-buffer"
-
-# Restore pre-2.1 behavior of scrolling with the scrollwheel in Vim, less, copy
-# mode etc, otherwise entering copy mode if not already in it.
-#
-#   if in copy mode (pane_in_mode) || using the mouse already (mouse_any_flag)
-#     pass through mouse events to current pane (send -Mt=)
-#   elsif in alternate screen mode
-#     send `Up` key
-#   else
-#     enter copy mode (-e exits if we scroll to the bottom)
-#   end
-#
-bind -n WheelUpPane \
-  if-shell -Ft= '#{?pane_in_mode,1,#{mouse_any_flag}}' \
-    'send -Mt=' \
-    'if-shell -Ft= "#{alternate_on}" "send -t= Up" "copy-mode -et="'
-bind -n WheelDownPane \
-  if-shell -Ft = '#{?pane_in_mode,1,#{mouse_any_flag}}' \
-    'send -Mt=' \
-    'if-shell -Ft= "#{alternate_on}"  "send -t= Down" "send -Mt="'
-
-# Stay in copy mode on drag end, but otherwise exit for mouse up.
-# Requires patch from https://github.com/tmux/tmux/issues/326
-unbind -t vi-copy MouseDragEnd1Pane
-bind -t vi-copy MouseUp1Pane cancel
 
 # Status bar {{{1
 
