tmux: enable tmux plugin manager

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -86,7 +86,7 @@ unbind C-b
 set -g prefix C-Space
 
 # Ensure that we can send Ctrl-Space to other apps
-bind C-Space send-prefix
+bind C-b send-prefix
 
 # Bindings {{{1
 
@@ -102,7 +102,6 @@ unbind C
 bind C new-window -c "~"
 # normally prefix-%
 unbind %
-bind | split-window -h -c "#{pane_current_path}"
 bind \ split-window -h -c "#{pane_current_path}"
 # normally prefix-"
 unbind '"'
@@ -172,13 +171,20 @@ bind Down last-window \; swap-pane -s fullscreen.1 \; kill-window -t fullscreen
 unbind y
 bind y setw synchronize-panes
 
+# change sessions within tmux
+unbind (
+bind -r C-Left switch-client -p
+unbind )
+bind -r C-Right switch-client -n
+
 # vim-style yank-paste tmux buffers
 unbind [
 bind Escape copy-mode
-unbind p
-bind p paste-buffer
 bind -t vi-copy v begin-selection
 bind -t vi-copy y copy-selection
+unbind p
+bind p paste-buffer
+# bind P choose-buffer
 
 # vim-style yank/paste to X primary
 bind -t vi-copy Y copy-pipe "xsel --input --primary"
@@ -324,4 +330,30 @@ setw -g pane-active-border-style fg=colour11
 setw -g clock-mode-colour colour2
 setw -g clock-mode-style 24
 
-# vim: fdm=marker:
+# tmux plugin manager {{{1
+
+# prefix + I
+#
+# Installs new plugins from GitHub or any other git repository
+# Refreshes TMUX environment
+#
+# prefix + U
+#
+# updates plugin(s)
+#
+# prefix + alt + u
+#
+# remove/uninstall plugins not on the plugin list
+
+# List of plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'knowledgejunkie/tmux-logging'
+# set -g @plugin 'tmux-plugins/tmux-sensible'
+
+# Other examples:
+# set -g @plugin 'github_username/plugin_name'
+# set -g @plugin 'git@github.com/user/plugin'
+# set -g @plugin 'git@bitbucket.com/user/plugin'
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
