tmux: update vi mode bindings for tmux 2.5
tmux 2.5 gets rid of the vi-copy key table and mode and replaces
it with the copy-mode-vi table/mode.

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -11,7 +11,7 @@
 
 # Bindings:
 # - to see current bindings:
-#   list-keys -t {vi,emacs}-{edit,choice,copy}
+#     :list-keys [-T copy-mode{,-vi}]
 
 # Global settings {{{1
 
@@ -179,19 +179,19 @@ bind -r C-Right switch-client -n
 
 # vim-style yank-paste tmux buffers
 unbind [
-bind Escape copy-mode
-bind -t vi-copy v begin-selection
-bind -t vi-copy y copy-selection
+bind Escape copy-mode-vi
+bind -Tcopy-mode-vi v send -X begin-selection
+bind -Tcopy-mode-vi y send -X copy-selection
 unbind p
 bind p paste-buffer
 # bind P choose-buffer
 
 # vim-style yank/paste to X primary
-bind -t vi-copy Y copy-pipe "xsel --input --primary"
+bind -Tcopy-mode-vi Y send -X copy-pipe "xsel --input --primary"
 bind P run "xsel --output --primary | tmux load-buffer - && tmux paste-buffer"
 
 # vim-style yank/paste to X clipboard
-bind -t vi-copy C-c copy-pipe "xsel --input --clipboard"
+bind -Tcopy-mode-vi C-c send -X copy-pipe "xsel --input --clipboard"
 bind C-v run "xsel --output --clipboard | tmux load-buffer - && tmux paste-buffer"
 
 # Status bar {{{1
