--- a/.tmux.conf
+++ b/.tmux.conf
@@ -177,21 +177,30 @@ bind -r C-Left switch-client -p
 unbind )
 bind -r C-Right switch-client -n
 
+# Vim-mode bindings {{{1
+
 # vim-style yank-paste tmux buffers
-unbind [
-bind Escape copy-mode-vi
+unbind Escape
+bind Escape copy-mode
+
 bind -Tcopy-mode-vi v send -X begin-selection
-bind -Tcopy-mode-vi y send -X copy-selection
+bind -Tcopy-mode-vi V send -X select-line
+bind -Tcopy-mode-vi C-v send -X rectangle-toggle \; send -X begin-selection
+bind -Tcopy-mode-vi y send -X copy-selection-and-cancel
+bind -Tcopy-mode-vi Escape send -X cancel
+
 unbind p
 bind p paste-buffer
-# bind P choose-buffer
+bind C-p choose-buffer
 
 # vim-style yank/paste to X primary
-bind -Tcopy-mode-vi Y send -X copy-pipe "xsel --input --primary"
+# bind -Tcopy-mode-vi Y send -X copy-pipe "xsel --input --primary"
+bind -Tcopy-mode-vi Y send -X copy-pipe-and-cancel "xsel --input --primary"
 bind P run "xsel --output --primary | tmux load-buffer - && tmux paste-buffer"
 
 # vim-style yank/paste to X clipboard
-bind -Tcopy-mode-vi C-c send -X copy-pipe "xsel --input --clipboard"
+# bind -Tcopy-mode-vi C-c send -X copy-pipe "xsel --input --clipboard"
+bind -Tcopy-mode-vi C-c send -X copy-pipe-and-cancel "xsel --input --clipboard"
 bind C-v run "xsel --output --clipboard | tmux load-buffer - && tmux paste-buffer"
 
 # Status bar {{{1
