tmux: status line updates

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -210,12 +210,11 @@ set -g status-left-length 30
 set -g status-left "#[fg=colour2]#S #[fg=colour11]on #[fg=colour9]#H"
 
 # Status line right side
-# 15% | 28 Nov | 18:15
 set -g status-right-length 30
-set -g status-right "#(tmux-battery -t) #[fg=colour11]| %d %b | %R"
+set -g status-right "#[fg=colour0]#S #[fg=colour0]on #[fg=colour0]#H"
 
 # Update the status bar every sixty seconds
-set -g status-interval 60
+# set -g status-interval 60
 
 # Nested session support {{{1
 #   Based on http://stahlke.org/dan/tmux-nested/
@@ -234,8 +233,7 @@ bind -n M-F11 \
     setw -qg window-status-activity-style fg=colour12,bg=default \; \
     setw -qg window-status-bell-style fg=colour0,bg=colour1 \; \
     setw -qg window-status-format '(Inactive)' \; \
-    set -qg status-left " " \; \
-    set -qg status-right " " \;
+    set -qg status-left "" \;
 
 # Convenience binding to enable status bar
 bind -n M-F12 \
@@ -245,8 +243,7 @@ bind -n M-F12 \
     setw -qg window-status-activity-style fg=colour1,bg=default \; \
     setw -qg window-status-bell-style fg=colour0,bg=colour1 \; \
     setw -qg window-status-format '#I:#W#F' \; \
-    set -qg status-left "#[fg=colour2]#S #[fg=colour11]on #[fg=colour9]#H" \; \
-    set -qg status-right "#(tmux-battery -t) #[fg=colour11]| %d %b | %R" \;
+    set -qg status-left "#[fg=colour2]#S #[fg=colour11]on #[fg=colour9]#H" \;
 
 # "Switch" to inner (nested) session:
 # - send M-F12 to active window (inner (nested) session) to enable status bar
@@ -259,8 +256,7 @@ bind -n S-Up \
     setw -qg window-status-activity-style fg=colour12,bg=default \; \
     setw -qg window-status-bell-style fg=colour0,bg=colour1 \; \
     setw -qg window-status-format '(Inactive)' \; \
-    set -qg status-left " " \; \
-    set -qg status-right " " \; \
+    set -qg status-left "" \; \
     unbind -n S-Left \; \
     unbind -n S-Right \; \
     unbind -n C-S-Left \; \
@@ -284,7 +280,6 @@ bind -n S-Down \
     setw -qg window-status-bell-style fg=colour0,bg=colour1 \; \
     setw -qg window-status-format '#I:#W#F' \; \
     set -qg status-left "#[fg=colour2]#S #[fg=colour11]on #[fg=colour9]#H" \; \
-    set -qg status-right "#(tmux-battery -t) #[fg=colour11]| %d %b | %R" \; \
     bind -n S-Left  previous-window \; \
     bind -n S-Right next-window \; \
     bind -n C-S-Left swap-window -t -1 \; \
