tmux: add vim modeline

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -361,3 +361,5 @@ set -g @plugin 'knowledgejunkie/tmux-logging'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
+
+# vim: fdm=marker
