tmux: update header comments

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -6,12 +6,17 @@
 #   https://pragprog.com/titles/bhtmux/source_code
 #   https://github.com/wincent/wincent/blob/master/roles/dotfiles/files/.tmux.conf
 #   https://github.com/nicknisi/dotfiles/blob/master/tmux/tmux.conf.symlink
+#
+#   ... and many more!
 
 # Tips {{{1
 
 # Bindings:
 # - to see current bindings:
 #     :list-keys [-T copy-mode{,-vi}]
+#
+# - to see all bindable keys:
+#     https://raw.githubusercontent.com/tmux/tmux/master/key-string.c
 
 # Global settings {{{1
 
