--- a/.tmux.conf
+++ b/.tmux.conf
@@ -84,6 +84,7 @@ setw -g mode-keys vi
 
 # Center the window list
 set -g status-justify centre
+
 # Prefix {{{1
 
 # Prefix
@@ -93,7 +94,7 @@ set -g prefix C-Space
 # Ensure that we can send Ctrl-Space to other apps
 bind C-b send-prefix
 
-# Bindings {{{1
+# General bindings {{{1
 
 # Reload the file with Prefix r
 unbind r
