git: add aliases to show all authors/committers to a repository

--- a/.gitconfig
+++ b/.gitconfig
@@ -128,6 +128,9 @@
 
     ctags = !.git/hooks/ctags
 
+    authors = shortlog -sne --all
+    committers = shortlog -snce --all
+
 [diff]
     algorithm = patience
 
